prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:11:31
   |
11 |     fn result_is_one() -> bool;
   |                               ^

error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:16:5
   |
16 |     static FOO: usize = 0;
   |     ^^^^^^

error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:22:5
   |
22 |     #[pure]
   |     ^

error: `predicate!` can only be used on function definitions. it supports no attributes.
  --> $DIR/predicate_fail-2.rs:31:5
   |
31 |     #[trusted]
   |     ^

error: aborting due to 4 previous errors

